...
        mutableStateOf( android.util.Patterns.EMAIL_ADDRESS.matcher(text).matches())
    }
    OutlinedTextField(
        value = text,
        onValueChange = { onChange(it) },
        label = {
            Text("Name or Email Address",
                color = MaterialTheme.colorScheme.primary,
                style = MaterialTheme.typography.labelMedium,
            ) },
        placeholder = { Text(text = "Name or Email Address") },
        keyboardOptions = KeyboardOptions(
            imeAction = ImeAction.Next,
...
            }
        )

    )
    if (text.isNotEmpty() && !isValidEmail) {
        Text(
            text = "Invalid Email",
            color = MaterialTheme.colorScheme.error,
            style = MaterialTheme.typography.bodySmall,
            modifier = Modifier.padding(start = 16.dp, top = 4.dp)
        )
    }
}
