...
        AnimatedVisibility(visible = pagerState.currentPage == 2) {
            OutlinedButton(
                shape = RoundedCornerShape(20.dp),
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(horizontal = 8.dp)
                    .testTag("login_button"),
                onClick = {
                    shouldAutoScroll = false // Memberhentikan perulangan
                    onGettingStartedClick()
                },
                colors = ButtonDefaults.outlinedButtonColors(
                    colorResource(id = R.color.purple_500),
...
